styles/index.scss
body, html {
    margin: 0;
    padding: 0;
    height: 100%;
}

/* Container layout */
.container {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    margin: 0;
}

.first-page {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(../images/cliff-img.png);
    background-repeat: no-repeat;
    background-size: cover;
}

/* Style for the main heading */
h1 {
    text-transform: uppercase;
    font-size: 48px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 700;
    color: #ffffff;
    text-align: center;
    margin-top: 20%;
}

.mainp {
    font-size: 22px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 400;
    letter-spacing: 6.82px;
    text-align: center;
    color: #ffffff;
}

/* header */
.header {
    background-color: #5474FD;
    padding: 20px 30px;
}

.header-content {
    display: flex;
    justify-content: space-between; 
    align-items: center; 
}

/* Logo */
.logo {
    text-transform: uppercase;
    font-size: 26px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 700;
    color: #ffffff;
    margin: 0; 
}

/* Navbar */
.navbar {
    text-align: right;
}

nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

ul li {
    display: inline-block; 
    padding: 10px 15px;
}

li a {
    text-decoration: none;
    text-transform: uppercase;
    color: #ffffff;
    font-family: "Aleo", serif;
    font-size: 20px;
}

.header a:hover {
    text-decoration: underline;
}



/*Second page style*/
.second-page {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 250px;   /*I know the padding is massive, but I dont know how else to fix it */
    background-image: url(../images/city-img.png);
    background-size: cover;
    background-repeat: no-repeat;
    margin: 0;
}

.text-content {
    flex: 1;
    max-width: 50%;
}

.image-container {
    display: flex;
    flex-direction: column;
    gap: 20px; 
    max-width: 40%; 
}

.why-us-img-house {
    width: 100%;
    height: auto;
    object-fit: cover;
}
.why-us-img-cliff {
    width: 100%;
    height: auto;
    object-fit: cover;
    margin-left: 100px;
}

.why-us {
    font-size: 36px;
    font-family: "Aleo", serif;
    color: #ffffff;
}

.why-us-txt {
    font-size: 16px;
    line-height: 1.6;
    color: #ffffff;
}

.explore {
    margin-top: 20px;
    padding: 10px 20px;
    font-size: 16px;
    letter-spacing: 1.2px;
    line-height: 26px;
    color: #ffffff;
    background-color: #5474FD;
    opacity: 0.8;
    border: none;
    cursor: pointer;
}

.explore:hover {
    background-color: #4358c0;
}

/* Dark Container Style */
.dark-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 40px 0;
    background-color: #333333;
}

.step {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    color: #ffffff;
}


/*Third page style*/
.third-page {
    height: 50vh;
    width: 100%;
    background-position: center;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    background-image: url(../images/villa-img.png);
    margin: 0;
}

.text-content-left {
    max-width: 350px;
    background-color: #232323;
    opacity: 0.8;
    padding: 20px;
    position: absolute;
    left: 10%;
}

.spain {
    color: #ffffff;
    font-size: 20px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 400;
    line-height: 26px;
    letter-spacing: 1.5px;
}

.grand-spain {
    font-size: 20px;
    line-height: 26px;
    letter-spacing: 0px;
    color: #ffffff;
    text-transform: uppercase;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 700;
}

.spain-txt {
    font-size: 16px;
    line-height: 26px;
    letter-spacing: 0px;
    color: #ffffff;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 400;
}

.book-now {
    margin-top: 20px;
    padding: 10px 20px;
    font-size: 16px;
    letter-spacing: 1.2px;
    line-height: 26px;
    color: #ffffff;
    background-color: #5474FD;
    border: none;
    cursor: pointer;
}

.book-now:hover {
    background-color: #4358c0;
}

/*Fourth page style*/
.fourth-page {
    height: 50vh;
    width: 100%;
    background-position: center;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    background-image: url(../images/sunset-img.png);
    margin: 0;
   
}

.text-content-right {
    max-width: 350px;
    background-color: #232323;
    opacity: 0.8;
    padding: 20px;
    position: absolute;
    right: 10%;
}

